NoSideExperiment (final): Fix overflow at mobile displays

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,7 +9,6 @@
         -ms-flex-pack: start;
         justify-content: start;
         height: auto;
-        width: calc(100vw - 40px);
         max-width: calc(100vw - 40px);
     }
     /* bento {
